Enable SoundTouch and MixxxCore dependency. Merge more dependency-specific configurations into their appropriate Dependency.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -72,22 +72,6 @@ def CheckForPKG( context, name, version="" ):
 		context.Result( ret )
 	return ret
 
-def getFlags(env, argflag, default=0):
-	"""
-	* get value passed as an argument to scons as argflag=value
-	* if no value is passed to scons use stored value
-	* if no value is stored, use default
-	Returns the value and stores it in env[argflag]
-	"""
-	flags = ARGUMENTS.get(argflag, -1)
-	if int(flags) < 0:
-		if env.has_key(argflag):
-			flags = env[argflag]
-		else: #default value
-			flags = default
-	env[argflag] = flags
-	return flags
-
 flags = {}
 
 #Figure out what the QT path is
@@ -435,12 +419,14 @@ conf = Configure(env, custom_tests = { 'CheckForPKGConfig' : CheckForPKGConfig, 
 
 # Currently manual dependency checking
 
-mixxx_base_dependencies = [depends.Qt,
+mixxx_base_dependencies = [depends.MixxxCore,
+                           depends.Qt,
                            depends.PortAudio,
                            depends.PortMIDI,
                            depends.Mad,
                            depends.OggVorbis,
                            depends.SndFile,
+                           depends.SoundTouch,
                            depends.KissFFT,
                            depends.FidLib,
                            depends.OpenGL]
@@ -489,64 +475,8 @@ if build.platform_is_linux:
 		print 'pkg-config >= 0.15.0 not found.'
 		Exit(1)
 
-	#Check for QT >= 4.3
-	if not conf.CheckForPKG('QtCore', '4.3'):
-		print 'QT >= 4.3 not found.'
-		Exit(1)
-	else:
-		#Grabs the QT4 include paths
-		"""
-		env.ParseConfig('pkg-config QtCore --silence-errors --cflags --libs')
-		env.ParseConfig('pkg-config Qt3Support --silence-errors --cflags') #QT3 support breaks the build
-		env.ParseConfig('pkg-config QtSql --silence-errors --cflags --libs')
-		env.ParseConfig('pkg-config QtGui --silence-errors --cflags --libs')
-		env.ParseConfig('pkg-config QtXml --silence-errors --cflags --libs')
-		env.ParseConfig('pkg-config QtOpenGL --silence-errors --cflags --libs')
-		env.ParseConfig('pkg-config QtScript --silence-errors --cflags --libs')
-		"""
-		#Try using David's qt4.py's Qt4-module finding thingy instead of pkg-config.
-		#(This hopefully respects our qtdir=blah flag while linking now.)
-
-		env.EnableQt4Modules([
-		'QtCore',
-		'QtGui',
-		'QtOpenGL',
-		'Qt3Support',
-		'QtXml',
-		'QtSvg',
-		'QtSql',
-		'QtScript',
-		'QtXmlPatterns',
-		'QtWebKit'
-		#'QtUiTools',
-		#'QtDesigner',
-		#'QtWebKit',
-		],
-		debug=False,
-		)
-
-	#Another check for PortAudio-v19 # why? -kousu
-	env.ParseConfig('pkg-config --cflags --libs portaudio-2.0')
-		#If the above line looks like magic, it's because it really is. (Read about ParseConfig, it's nifty)
-
 #Platform-specific checks for OS X
 if build.platform_is_osx:
-
-	env.Append(CPPPATH='/Library/Frameworks/OpenGL.framework/Headers/')
-	env.Append(LINKFLAGS='-framework OpenGL')
-
-	#QT4
-	env.Append(LINKFLAGS = '-framework QtCore -framework QtOpenGL -framework Qt3Support -framework QtGui -framework QtSql -framework QtXml -framework QtXmlPatterns  -framework QtNetwork -framework QtSql -framework QtScript -framework QtWebKit')
-	env.Append(CPPPATH = ['/Library/Frameworks/QtCore.framework/Headers/',
-				'/Library/Frameworks/QtOpenGL.framework/Headers/',
-				'/Library/Frameworks/Qt3Support.framework/Headers/',
-				'/Library/Frameworks/QtGui.framework/Headers/',
-				'/Library/Frameworks/QtXml.framework/Headers/',
-				'/Library/Frameworks/QtNetwork.framework/Headers/',
-				'/Library/Frameworks/QtSql.framework/Headers/',
-				'/Library/Frameworks/QtWebKit.framework/Headers/',
-				'/Library/Frameworks/QtScript.framework/Headers/'])
-
 	#Non-standard libpaths for fink and darwin ports
 	env.Append(LIBPATH = ['/sw/lib'])
 	env.Append(CPPPATH = ['/sw/include'])
@@ -581,7 +511,7 @@ if have_faad and not build.platform_is_windows:
                         autoadd=False))
 
 have_m4a = have_mp4 and have_faad
-flags['m4a'] = getFlags(env, 'm4a', 0)
+flags['m4a'] = util.get_flags(env, 'm4a', 0)
 if int(flags['m4a']) and not have_m4a:
         if not have_mp4:
                 print 'Did not find libmp4v2 or the libmp4v2 development headers, exiting!'
@@ -590,7 +520,7 @@ if int(flags['m4a']) and not have_m4a:
         Exit(1)
 
 have_wv = conf.CheckLib(['wavpack', 'wv'])
-flags['wv'] = getFlags(env,'wv',0)
+flags['wv'] = util.get_flags(env,'wv',0)
 if int(flags['wv']):
 	print "WavPack audio file support...",
 	if have_wv:
@@ -637,33 +567,16 @@ elif build.platform_is_windows:
 if build.platform_is_linux or build.platform_is_bsd: #a define for code that works on unix only can ask for (not sure if this is actually used anywhere)
 	env.Append(CPPDEFINES='__UNIX__')
 
-env.Append(CPPDEFINES = '__PORTAUDIO__'); #Turn on PortAudio support in Mixxx
 env.Append(CPPPATH = ['.', '../', '../../']) #Fun fun fun with paths
 
 if build.platform_is_linux or build.platform_is_bsd:
-	env.Append(LIBS = 'Qt3Support')
-	env.Append(LIBS = 'QtXml')
-	env.Append(LIBS = 'QtGui')
-	env.Append(LIBS = 'QtCore')
-	env.Append(LIBS = 'QtNetwork')
-	env.Append(LIBS = 'QtOpenGL')
-	env.Append(LIBS = 'QtWebKit')
-	env.Append(LIBS = 'QtScript')
 	env.Append(LIBS = 'sndfile') #? we shouldn't have to do this...
 	env.Append(LIBS = 'vorbisfile') #? we shouldn't have to do this...
 
 if build.platform_is_windows:
-	env.Append(LIBS = 'Qt3Support4'); #Windows needs this instead of 'Qt3Support'
-	env.Append(LIBS = 'QtXml4');
-	env.Append(LIBS = 'QtXmlPatterns4');
-	env.Append(LIBS = 'QtSql4');
-	env.Append(LIBS = 'QtGui4');
-	env.Append(LIBS = 'QtCore4');
-	env.Append(LIBS = 'QtWebKit4');
-	env.Append(LIBS = 'QtNetwork4')
-	env.Append(LIBS = 'QtOpenGL4');
-	env.Append(LIBS = 'WinMM'); #Needed for Midi stuff
-    #Tobias Rafreider: libshout won't compile if you uncomment this
+        #Needed for Midi stuff, should be able to remove since PortMIDI
+	env.Append(LIBS = 'WinMM');
+        #Tobias Rafreider: libshout won't compile if you uncomment this
 	#env.Append(LIBS = 'ogg_static')
 	#env.Append(LIBS = 'vorbis_static')
 	#env.Append(LIBS = 'vorbisfile_static')
@@ -673,29 +586,14 @@ if build.platform_is_windows:
 	env.Append(LIBS = 'winspool')
 	env.Append(LIBS = 'shell32')
 
-env.Append(CPPDEFINES = ['QT3_SUPPORT', 'QT3_SUPPORT_WARNINGS', 'QT_THREAD_SUPPORT', 'QT_SHARED', 'QT_TABLET_SUPPORT']) #Stolen from Mixxx's build output
-
-if not build.platform_is_osx:
-	env.Append(CPPPATH=['$QTDIR/include/Qt3Support',
-			    '$QTDIR/include/QtCore',
-			    '$QTDIR/include/QtGui',
-			    '$QTDIR/include/QtXml',
-			    '$QTDIR/include/QtNetwork',
-			    '$QTDIR/include/QtSql',
-			    '$QTDIR/include/QtOpenGL',
-			    '$QTDIR/include/QtWebKit',
-			    '$QTDIR/include/Qt'])
-
 if build.platform_is_windows:
 	env.Append(CPPPATH=["$VCINSTALLDIR/include/atl", "C:/Program Files/Microsoft Platform SDK/Include/atl"])
-	env.Append(CPPDEFINES = 'WIN'+bitwidth) #for soundtouch
 else:
-	env.Append(CCFLAGS = Split(""" -pipe -Wall -W -g """)) # omghax
-	env.Append(LINKFLAGS = Split(""" -pipe -Wall -W -g"""))
-	if not build.platform_is_osx:
-		env.Append(LINKFLAGS = "-Wl,-rpath,$QTDIR/lib")
-	env.Append(LINKFLAGS = "-Wl,-rpath,$QTDIR/lib")
-	env.Append(CPPDEFINES = "_REENTRANT")
+        # TODO(XXX) always generate debugging info? Why -pipe?
+	env.Append(CCFLAGS = Split(""" -pipe -Wall -Wextra -g """)) # omghax
+        # These are not valid linker flags. Delete?
+	env.Append(LINKFLAGS = Split(""" -pipe -Wall -Wextra -g"""))
+
 
 #Uic these guys (they're moc'd automatically after this) - Generates the code for the QT UI forms
 env.Uic4('dlgpreferencesdlg.ui')
@@ -731,39 +629,6 @@ if build.platform_is_windows:
 #Tell SCons to build libraries that are bundled with Mixxx
 #===================================================
 
-#SoundTouch
-#XXX this should be done with a subsconscript
-
-soundtouch_path = 'soundtouch-1.4.1'
-
-env.Append(CPPPATH=['#lib/'+soundtouch_path])
-sources += Split("""engine/enginebufferscalest.cpp
-                    #lib/""" + soundtouch_path + """/SoundTouch.cpp
-                    #lib/""" + soundtouch_path + """/TDStretch.cpp
-                    #lib/""" + soundtouch_path + """/RateTransposer.cpp
-                    #lib/""" + soundtouch_path + """/AAFilter.cpp
-                    #lib/""" + soundtouch_path + """/FIFOSampleBuffer.cpp
-                    #lib/""" + soundtouch_path + """/FIRFilter.cpp
-                    #lib/""" + soundtouch_path + """/PeakFinder.cpp
-                    #lib/""" + soundtouch_path + """/BPMDetect.cpp
-                    """)
-
-if build.platform_is_windows:
-	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_win.cpp""")
-	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_win.cpp""")
-else:
-	if bitwidth == '64':
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x64_gcc.cpp""")
-	else:
-		sources += Split("""#lib/""" + soundtouch_path + """/cpu_detect_x86_gcc.cpp""")
-
-
-#libsamplerate - Getting rid of this out of our source tree since we don't use it.
-#env.Append(CPPPATH='#lib/libsamplerate')
-#sources += Split("""engine/enginebufferscalesrc.cpp #lib/libsamplerate/samplerate.c #lib/libsamplerate/src_linear.c #lib/libsamplerate/src_sinc.c #lib/libsamplerate/src_zoh.c""")
-
 # General MSVC defines? Anybody know why these are required
 if build.platform_is_windows:
 	env.Append(LINKFLAGS = ['/nodefaultlib:LIBCMT.lib', '/nodefaultlib:LIBCMTD.lib'])
@@ -777,7 +642,7 @@ print "\nFeatures Summary:\n================"
 
 
 #High quality EQs
-flags['hifieq'] = getFlags(env, 'hifieq', 1)
+flags['hifieq'] = util.get_flags(env, 'hifieq', 1)
 if int(flags['hifieq']) == 0:
 	env.Append(CPPDEFINES = ['__LOFI__', '__NO_INTTYPES__']) #Enables old crappy EQs
 	print "High quality EQs... disabled"
@@ -786,7 +651,7 @@ else:
 	build_flags += 'hifieq '
 
 #Experimental IPOD support
-flags['ipod'] = getFlags(env, 'ipod', 0)
+flags['ipod'] = util.get_flags(env, 'ipod', 0)
 if int(flags['ipod']):
 	env.Append(CPPDEFINES = '__IPOD__')
 
@@ -813,7 +678,7 @@ else:
 	print "iPod support... disabled"
 
 #Shoutcast support
-flags_shoutcast = getFlags(env, 'shoutcast', 0)
+flags_shoutcast = util.get_flags(env, 'shoutcast', 0)
 
 if int(flags_shoutcast):
 	shoutmp3 = 0
@@ -854,7 +719,7 @@ else:
 	print "Shoutcast support... disabled"
 
 #LADSPA
-flags['ladspa'] = getFlags(env, 'ladspa', 0)
+flags['ladspa'] = util.get_flags(env, 'ladspa', 0)
 if int(flags['ladspa']):
 	env.Append(CPPPATH=['#lib/ladspa']) #If you add more directories, separate them with a semicolon (;)
 	env.Append(CPPDEFINES = '__LADSPA__')
@@ -882,7 +747,7 @@ else:
 	print "LADSPA support... disabled"
 
 #Vinyl Control
-flags['vinylcontrol'] = getFlags(env, 'vinylcontrol', 1)
+flags['vinylcontrol'] = util.get_flags(env, 'vinylcontrol', 1)
 if int(flags['vinylcontrol']):
 	env.Append(CPPDEFINES = '__VINYLCONTROL__')
 	sources += Split(""" vinylcontrol.cpp vinylcontrolproxy.cpp vinylcontrolscratchlib.cpp vinylcontrolxwax.cpp dlgprefvinyl.cpp vinylcontrolsignalwidget.cpp engine/enginevinylcontrol.cpp """)
@@ -898,8 +763,12 @@ if int(flags['vinylcontrol']):
 else:
 	print "Vinyl Control... disabled"
 
-flags['msvcdebug'] = getFlags(env, 'msvcdebug', 0)
+flags['msvcdebug'] = util.get_flags(env, 'msvcdebug', 0)
 if build.platform_is_windows:
+        if not build.toolchain_is_msvs:
+                print "Error, msvcdebug flag set when toolchain is not MSVS. Exiting."
+                Exit(1)
+
 	if int(flags['msvcdebug']):
 		env.Append(CCFLAGS = '/MDd') # required for sndfile w/ flac support on windows
 		env.Append(LINKFLAGS = '/DEBUG')
@@ -916,7 +785,7 @@ if build.platform_is_windows:
 		print "MSVC Debugging... disabled"
 
 
-flags['tonal'] = getFlags(env, 'tonal', 0)
+flags['tonal'] = util.get_flags(env, 'tonal', 0)
 if int(flags['tonal']):
 	print "Tonal analysis... enabled"
 	build_flags += 'tonal '
@@ -928,7 +797,7 @@ else:
 
 
 
-flags['m4a'] = getFlags(env, 'm4a', 0)
+flags['m4a'] = util.get_flags(env, 'm4a', 0)
 if int(flags['m4a']):
 	print "Apple M4A audio file support...",
 	if have_m4a:
@@ -978,7 +847,7 @@ def run_tests():
 		print "WARNING: Not all tests pass. See mixxx-test output."
 		Exit(ret)
 
-flags['test'] = getFlags(env, 'test', 0) or 'test' in BUILD_TARGETS
+flags['test'] = util.get_flags(env, 'test', 0) or 'test' in BUILD_TARGETS
 
 if int(flags['test']):
 	print "Test suite... enabled"
@@ -988,7 +857,7 @@ else:
 	print "Test suite... disabled"
 
 # Script Studio
-flags['script'] = getFlags(env, 'script', 0)
+flags['script'] = util.get_flags(env, 'script', 0)
 if int(flags['script']):
 	if build.platform_is_windows:
 		env.Append(LIBS = 'QtScript4')
@@ -1018,7 +887,7 @@ else:
 	print "MixxxScript Studio... disabled"
 
 # MIDI Scripting
-flags['midiscript'] = getFlags(env, 'midiscript', 0)
+flags['midiscript'] = util.get_flags(env, 'midiscript', 0)
 if int(flags['midiscript']):
 	if build.platform_is_windows:
 		env.Append(LIBS = 'QtScript4')
@@ -1039,10 +908,11 @@ else:
 	print "MIDI Scripting... disabled"
 
 # Profiling and Optimization
+flags['profiling'] = util.get_flags(env, 'profiling', 0)
 if build.platform_is_linux:
-	flags['profiling'] = getFlags(env, 'profiling', 0)
 	if int(flags['profiling']):
 		env.Append(CCFLAGS = '-pg')
+                # -pg is not a valid linkflag
 		env.Append(LINKFLAGS = '-pg')
 		print "gprof (Linux) profiling support... enabled"
 		build_flags += 'profiling '
@@ -1050,7 +920,6 @@ if build.platform_is_linux:
 		print "gprof (Linux) profiling support... disabled"
 
 if build.platform_is_osx:
-	flags['profiling'] = getFlags(env, 'profiling', 0)
 	if int(flags['profiling']):
 		env.Append(CCFLAGS = '-finstrument-functions')
 		env.Append(LINKFLAGS = '-lSaturn')
@@ -1059,18 +928,20 @@ if build.platform_is_osx:
 	else:
 		print "profiling profiling support... disabled"
 
-flags['tuned'] = getFlags(env, 'tuned', 0)
+flags['tuned'] = util.get_flags(env, 'tuned', 0)
 if int(flags['tuned']):
-	if not build.platform_is_windows:
+	if not build.toolchain_is_gnu:
 		ccv = env['CCVERSION'].split('.')
 		if int(ccv[0]) >= 4 and int(ccv[1]) >= 2:
+                        # Should we use -mtune as well?
 			env.Append(CCFLAGS = '-march=native')
+                        # Doesn't make sense as a linkflag
 			env.Append(LINKFLAGS = '-march=native')
 			print "Optimizing for this CPU... yes"
 			build_flags += 'tuned '
 		else:
 			print "Optimizing for this CPU... no (requires gcc >= 4.2.0)"
-	else:
+	elif build.toolchain_is_msvs:
 		if bitwidth == '64':
 			print "Optimizing for this CPU class (" + machine + ")... yes"
 			env.Append(CXXFLAGS = '/favor:' + machine)
@@ -1085,10 +956,10 @@ else:
 			env.Append(CXXFLAGS = '/favor:blend')
 
 #Specific optimization
-flags['optimize'] = getFlags(env, 'optimize', 1)
+flags['optimize'] = util.get_flags(env, 'optimize', 1)
 if int(flags['optimize']):
-	if build.platform_is_windows:
-		if machine == 'AMD64' or machine == 'EM64T':
+	if build.toolchain_is_msvs:
+		if build.machine_is_64bit:
 			env.Append(LINKFLAGS = '/MACHINE:X64')
 		else:
 			env.Append(LINKFLAGS = '/MACHINE:'+machine)
@@ -1105,7 +976,7 @@ if int(flags['optimize']):
 			elif flags['optimize'] >= '2':
 				print "  Maximum optimizations (/Ox)"
 				env.Append(CXXFLAGS = '/Ox')
-			if not machine == 'AMD64' and not machine == 'EM64T': # SSE and SSE2 are core instructions on x64
+			if not build.machine_is_64bit: # SSE and SSE2 are core instructions on x64
 				if flags['optimize'] == '3':
 					print "  SSE instructions enabled"
 					env.Append(CXXFLAGS = '/arch:SSE')
@@ -1145,7 +1016,7 @@ else:
 	print "Specific optimizations... disabled"
 
 #Linking with ASMLIB
-flags['asmlib'] = getFlags(env, 'asmlib', 0)
+flags['asmlib'] = util.get_flags(env, 'asmlib', 0)
 if int(flags['asmlib']):
 	print "Agner Fog\'s ASMLIB (http://www.agner.org/optimize)... enabled"
 	env.Append(LIBPATH='#/../asmlib')
@@ -1163,21 +1034,8 @@ if int(flags['asmlib']):
 else:
 	print "Agner Fog\'s ASMLIB (http://www.agner.org/optimize)... disabled"
 
-# SoundTouch Optimizations -- turn them on only if we have SSE or MMX
-# enabled. It's dumb that they appear here, but they make the most sense next to
-# the optimization stuff. It's safe to assume that if opt > 1, then MMX and SSE
-# are enabled. All 64-bit CPUs have MMX and SSE as well.
-if bitwidth == '64' or (not build.platform_is_windows and int(flags['optimize']) > 1) \
-    or (build.platform_is_windows and int(flags['optimize']) > 2):
-    sources += Split("""#lib/""" + soundtouch_path + """/mmx_optimized.cpp #lib/""" + soundtouch_path + """/sse_optimized.cpp""")
-    env.Append(CPPDEFINES='ALLOW_X86_OPTIMIZATIONS')
-
-# Enable SoundTouch 3DNow! optimizations for Windows (decides at runtime if they're useful)
-if build.platform_is_windows and not bitwidth == '64':
-    sources += Split("""#lib/""" + soundtouch_path + """/3dnow_win.cpp""")
-
 #Debugging output
-flags['qdebug'] = getFlags(env, 'qdebug', 0)
+flags['qdebug'] = util.get_flags(env, 'qdebug', 0)
 if build.platform_is_windows:
 	if int(flags['msvcdebug']):
 		flags['qdebug'] = 1		# Turn general debugging flag on too if msvcdebug is specified
@@ -1190,7 +1048,7 @@ else:
 	print "Debugging message output... disabled"
 
 #Visual Studio 2005 hacks (MSVS Express Edition users shouldn't enable this)
-flags['msvshacks'] = getFlags(env, 'msvshacks', 0)
+flags['msvshacks'] = util.get_flags(env, 'msvshacks', 0)
 if int(flags['msvshacks']):
 	env.Append(CPPDEFINES = '__MSVS2005__')
 	print "MSVS 2005 hacks... enabled"
@@ -1199,7 +1057,7 @@ else:
 	print "MSVS 2005 hacks... disabled"
 
 #force 32-bit compile on GCC
-'''flags['force32'] = getFlags(env, 'force32', 0)
+'''flags['force32'] = util.get_flags(env, 'force32', 0)
 if int(flags['force32']):
 	env.Append(CCFLAGS = '-m32')
 	env.Append(CXXFLAGS = '-m32')
@@ -1211,9 +1069,9 @@ else:
 
 #Case Metrics
 if build.platform_is_windows or build.platform_is_linux:
-	flags['cmetrics'] = getFlags(env, 'cmetrics', 1)
+	flags['cmetrics'] = util.get_flags(env, 'cmetrics', 1)
 else:
-	flags['cmetrics'] = getFlags(env, 'cmetrics', 0) # Off on OS X for now...
+	flags['cmetrics'] = util.get_flags(env, 'cmetrics', 0) # Off on OS X for now...
 if int(flags['cmetrics']):
 	env.Append(CPPDEFINES = '__C_METRICS__')
 	if build.platform_is_windows:
