Move source, uic, res and many Mixxx build settings into the MixxxCore dependency. Commented the inclusion of CoreAudio and related frameworks for Albert to poke at.

--- a/mixxx/src/SConscript.env
+++ b/mixxx/src/SConscript.env
@@ -74,25 +74,6 @@ def CheckForPKG( context, name, version="" ):
 
 flags = {}
 
-#Figure out what the QT path is
-default_qtdir = {'linux': '/usr/share/qt4',
-		 'bsd': '/usr/local/lib/qt4',
-		 'osx': '/usr/lib/Qt-4.5', #XXX this should be smarter, we just need qt4 so we should accept the highest version that matches /usr/lib/Qt-4.*.*/
-		 'windows': 'C:\\qt\\4.5.1'}[build.platform]	 #ditto
-
-#Read the qtdir flag, if it was set explicitly
-flags['qtdir'] = ARGUMENTS.get('qtdir', os.environ.get('QTDIR', default_qtdir)) #environ['QTDIR'] there is mainly for the benefit of MSVC
-if not os.path.exists(flags['qtdir']):
-	print "Error: QT path does not exist or QT4 is not installed."
-	print "Please specify your QT path by running 'scons qtdir=[path]'"
-	Exit(1)
-elif flags['qtdir'].find("qt3") != -1 or flags['qtdir'].find("qt/3") != -1:
-	print "Error: Mixxx now requires QT4 instead of QT3 - please use your QT4 path with the qtdir build flag."
-	Exit(1)
-else:
-	print "QT path: " + flags['qtdir']
-
-
 # Grab the created environment from the MixxxBuild
 env = build.env
 
@@ -175,287 +156,41 @@ try:
 finally:
 	f.close()
 
-#Mixxx sources to build
-sources = Split("""
-
-                mixxxkeyboard.cpp
-                configobject.cpp
-                controlobjectthread.cpp
-                controlobjectthreadwidget.cpp
-                controlobjectthreadmain.cpp
-                controlevent.cpp
-                controllogpotmeter.cpp
-                controlobject.cpp
-                controlnull.cpp
-                controlpotmeter.cpp
-                controlpushbutton.cpp
-                controlttrotary.cpp
-                controlbeat.cpp
-
-                dlgpreferences.cpp
-                dlgprefsound.cpp
-                dlgprefmidibindings.cpp
-                dlgprefplaylist.cpp
-                dlgprefnomidi.cpp
-                dlgprefcontrols.cpp
-                dlgprefbpm.cpp
-                dlgbpmscheme.cpp
-                dlgabout.cpp
-                dlgprefeq.cpp
-                dlgprefcrossfader.cpp
-                dlgmidilearning.cpp
-                dlgtrackinfo.cpp
-                dlgprepare.cpp
-                dlgautodj.cpp
-
-                engine/engineworker.cpp
-                engine/engineworkerscheduler.cpp
-                engine/enginebuffer.cpp
-                engine/enginebufferscale.cpp
-		engine/enginebufferscaledummy.cpp
-                engine/enginebufferscalelinear.cpp
-		engine/enginebufferscalereal.cpp
-                engine/engineclipping.cpp
-                engine/enginefilterblock.cpp
-                engine/enginefilteriir.cpp
-                engine/enginefilter.cpp
-                engine/engineobject.cpp
-                engine/enginepregain.cpp
-                engine/enginevolume.cpp
-                engine/enginechannel.cpp
-                engine/enginemaster.cpp
-                engine/enginedelay.cpp
-                engine/engineflanger.cpp
-                engine/enginevumeter.cpp
-                engine/enginevinylsoundemu.cpp
-                engine/enginesidechain.cpp
-                engine/enginefilterbutterworth8.cpp
-                engine/enginexfader.cpp
-                engine/enginecontrol.cpp
-                engine/ratecontrol.cpp
-                engine/loopingcontrol.cpp
-                engine/bpmcontrol.cpp
-                engine/cuecontrol.cpp
-                engine/readaheadmanager.cpp
-                cachingreader.cpp
-
-                analyserqueue.cpp
-		analyserwavesummary.cpp
-		analyserbpm.cpp
-		analyserwaveform.cpp
-
-                midi/midimapping.cpp
-                midi/midiinputmappingtablemodel.cpp
-                midi/midioutputmappingtablemodel.cpp
-                midi/midichanneldelegate.cpp
-                midi/midistatusdelegate.cpp
-                midi/midinodelegate.cpp
-                midi/midioptiondelegate.cpp
-                midi/midimessage.cpp
-                midi/midiledhandler.cpp
-
-                main.cpp
-                controlgroupdelegate.cpp
-                controlvaluedelegate.cpp
-                mixxxcontrol.cpp
-                mixxx.cpp
-                mixxxview.cpp
-                errordialoghandler.cpp
-                upgrade.cpp
-
-                soundsource.cpp
-
-                widget/wwidget.cpp
-                widget/wlabel.cpp
-                widget/wnumber.cpp
-                widget/wnumberpos.cpp
-                widget/wnumberrate.cpp
-                widget/wnumberbpm.cpp
-                widget/wknob.cpp
-                widget/wdisplay.cpp
-                widget/wvumeter.cpp
-                widget/wpushbutton.cpp
-                widget/wslidercomposed.cpp
-                widget/wslider.cpp
-                widget/wstatuslight.cpp
-		widget/woverview.cpp
-		widget/wskincolor.cpp
-		widget/wabstractcontrol.cpp
-                widget/wsearchlineedit.cpp
-		widget/wpixmapstore.cpp
-		widget/hexspinbox.cpp
-
-                mathstuff.cpp
-
-                rotary.cpp
-                widget/wtracktableview.cpp
-                widget/wtracktableviewheader.cpp
-                widget/wlibrarysidebar.cpp
-                widget/wlibrary.cpp
-                widget/wlibrarytableview.cpp
-                widget/wpreparelibrarytableview.cpp
-                widget/wpreparecratestableview.cpp
-                widget/wbrowsetableview.cpp
-                widget/wlibrarytextbrowser.cpp
-                library/preparecratedelegate.cpp
-                library/trackcollection.cpp
-                library/basesqltablemodel.cpp
-                library/librarytablemodel.cpp
-                library/preparelibrarytablemodel.cpp
-                library/browsetablemodel.cpp
-                library/missingtablemodel.cpp
-                library/proxytrackmodel.cpp
-                library/abstractxmltrackmodel.cpp
-                library/rhythmboxtrackmodel.cpp
-                library/rhythmboxplaylistmodel.cpp
-                library/itunestrackmodel.cpp
-                library/itunesplaylistmodel.cpp
-                library/playlisttablemodel.cpp
-                library/libraryfeature.cpp
-                library/preparefeature.cpp
-                library/autodjfeature.cpp
-                library/mixxxlibraryfeature.cpp
-                library/playlistfeature.cpp
-                library/rhythmboxfeature.cpp
-                library/itunesfeature.cpp
-                library/browsefeature.cpp
-                library/cratefeature.cpp
-                library/browsefilter.cpp
-                library/sidebarmodel.cpp
-                library/libraryscanner.cpp
-                library/libraryscannerdlg.cpp
-                library/legacylibraryimporter.cpp
-                library/library.cpp
-                library/searchthread.cpp
-                library/dao/cratedao.cpp
-                library/cratetablemodel.cpp
-                library/dao/cuedao.cpp
-                library/dao/cue.cpp
-                library/dao/trackdao.cpp
-                library/dao/playlistdao.cpp
-                library/dao/libraryhashdao.cpp
-                library/dao/settingsdao.cpp
-                library/librarymidicontrol.cpp
-                library/schemamanager.cpp
-                library/promotracksfeature.cpp
-                library/featuredartistswebview.cpp
-                library/bundledsongswebview.cpp
-
-                xmlparse.cpp
-                parser.cpp
-                parserpls.cpp
-                parserm3u.cpp
-
-                bpm/bpmscheme.cpp
-
-                soundsourceproxy.cpp
-
-                widget/wvisualsimple.cpp
-                widget/wwaveformviewer.cpp
-                widget/wglwaveformviewer.cpp
-                waveformviewerfactory.cpp
-                waveform/renderobject.cpp
-                waveform/waveformrenderer.cpp
-		waveform/waveformrenderbackground.cpp
-		waveform/waveformrendersignal.cpp
-                waveform/waveformrendersignaltiles.cpp
-		waveform/waveformrendersignalpixmap.cpp
-		waveform/waveformrendermark.cpp
-                waveform/waveformrendermarkrange.cpp
-                waveform/waveformrenderbeat.cpp
-
-
-                imginvert.cpp
-                imgloader.cpp
-                imgcolor.cpp
-
-                trackinfoobject.cpp
-                player.cpp
-                sounddevice.cpp
-                soundmanager.cpp
-                dlgprefrecord.cpp
-                playerinfo.cpp
-
-                recording/enginerecord.cpp
-				recording/encoder.cpp
-
-                segmentation.cpp
-                """)
-
-#Set up the library path on Windows:
-if build.platform_is_windows:
-	env.Append(CPPPATH='#/../mixxx-win' + bitwidth + 'lib-msvc') #If you add more directories, separate them with a semicolon (;)
-	env.Append(LIBPATH='#/../mixxx-win' + bitwidth + 'lib-msvc')
-	env.Append(CPPPATH='../../lib/ladspa') #If you add more directories, separate them with a semicolon (;)
-	env.Append(LINKFLAGS = ['/nodefaultlib:libc.lib', '/nodefaultlib:libcd.lib',  '/entry:mainCRTStartup'])
-	env.Append(LIBS='advapi32') # needed for PortMIDI
-#'/subsystem:windows',
-
-if build.platform_is_bsd:
-	env.Append(CPPPATH=['/usr/include', '/usr/local/include', '/usr/X11R6/include/'])
-	env.Append(LIBPATH=['/usr/lib/', '/usr/local/lib', '/usr/X11R6/lib'])
-#BSD hacks
-#XXX todo: move these into their proper places
-
-	env.Append(LIBS='pthread')
-	env.Append(LIBS=['ogg', 'vorbis']) #why do we need to do this on OpenBSD and not on Linux? if we don't then CheckLib("vorbisfile") fails
-elif build.platform_is_osx:
-	#Non-standard libpaths for fink and certain (most?) darwin ports
-	env.Append(LIBPATH = ['/sw/lib'])
-	env.Append(CPPPATH = ['/sw/include'])
-
-	#Non-standard libpaths for darwin ports
-	env.Append(LIBPATH = ['/opt/local/lib'])
-	env.Append(CPPPATH = ['/opt/local/include'])
-
-
 #Check for dependencies if we're not doing a clean...
 #if not env.GetOption('clean') and not SCons.Util.containsAny(os.sys.argv, ['-h', '--help']):
 conf = Configure(env, custom_tests = { 'CheckForPKGConfig' : CheckForPKGConfig, 'CheckForPKG' : CheckForPKG })
 
-#TODO: Add all of the other configure checks as custom_tests properly.
 
-# On Posix default SCons.LIBPREFIX = 'lib', on Windows default SCons.LIBPREFIX = ''
-
-# Currently manual dependency checking
-
-mixxx_base_dependencies = [depends.MixxxCore,
-                           depends.Qt,
-                           depends.PortAudio,
-                           depends.PortMIDI,
-                           depends.Mad,
-                           depends.OggVorbis,
-                           depends.SndFile,
-                           depends.SoundTouch,
-                           depends.KissFFT,
-                           depends.FidLib,
-                           depends.OpenGL]
-
+mixxx_base_dependencies = [depends.MixxxCore]
+visited_dependencies = set()
 active_dependencies = []
 unmet_dependencies = False
-for dependency in mixxx_base_dependencies:
+
+def visit_dependency(dependency_class, build, conf):
+        """Recursively configure all dependencies. Skip over dependencies we
+        have already setup."""
+        if dependency_class in visited_dependencies:
+                return
+        visited_dependencies.add(dependency_class)
+        dependency = dependency_class()
         try:
-                # instantiate the dependency
-                dependency = dependency()
                 dependency.configure(build, conf)
-                active_dependencies.append(dependency)
         except Exception, e:
                 logging.error("Unmet dependency: %s" % e.message)
                 unmet_dependencies = True
+        active_dependencies.append(dependency)
+
+        for sub_dependency in dependency.depends(build):
+                visit_dependency(sub_dependency, build, conf)
+
+for dependency in mixxx_base_dependencies:
+        visit_dependency(dependency, build, conf)
 
 if unmet_dependencies:
         logging.error("Build had unmet dependencies. Exiting.")
         Exit(1)
 
-#Check if FFMPEG was enabled
-CheckFFMPEG(conf, sources)
-
-#check for libshout
-libshout_found = conf.CheckLib(['libshout','shout'])
-vorbisenc = conf.CheckLib('vorbisenc')
-
-sources += Split("""midi/mididevice.cpp """);
-sources += Split("""midi/mididevicemanager.cpp """);
+sources = []
 
 # Query each enabled dependency for sources they require
 for dependency in active_dependencies:
@@ -463,31 +198,12 @@ for dependency in active_dependencies:
         if dep_sources is not None:
                 sources.extend(dep_sources)
 
-#Platform-specific checks for Linux...
-if build.platform_is_linux:
-	#Check for g++ (yeah, SCONS is a bit dumb here)
-	if os.system("which g++ > /dev/null"): #Checks for non-zero return code
-		print "Did not find g++, exiting!"
-		Exit(1)
+#Check if FFMPEG was enabled
+CheckFFMPEG(conf, sources)
 
-	#Check for pkg-config
-	if not conf.CheckForPKGConfig('0.15.0'):
-		print 'pkg-config >= 0.15.0 not found.'
-		Exit(1)
-
-#Platform-specific checks for OS X
-if build.platform_is_osx:
-	#Non-standard libpaths for fink and darwin ports
-	env.Append(LIBPATH = ['/sw/lib'])
-	env.Append(CPPPATH = ['/sw/include'])
-
-	#Check for CoreMIDI
-	if not conf.CheckCXXHeader('/System/Library/Frameworks/CoreMIDI.framework/Headers/CoreMIDI.h'):
-		print 'Did not find CoreMIDI framework, exiting! (Please install it)'
-		Exit(1)
-	else:
-		env.Append(LINKFLAGS = '-framework CoreMIDI -framework CoreFoundation -framework CoreAudio -framework Carbon -framework QuickTime -framework AudioToolbox -framework AudioUnit') #Have to add the rest of these frameworks somewhere..
-
+#check for libshout
+libshout_found = conf.CheckLib(['libshout','shout'])
+vorbisenc = conf.CheckLib('vorbisenc')
 
 #hack: check for these here, before conf.Finish happens
 have_mp4v2_h = conf.CheckHeader('mp4v2/mp4v2.h')
@@ -521,6 +237,7 @@ if int(flags['m4a']) and not have_m4a:
 
 have_wv = conf.CheckLib(['wavpack', 'wv'])
 flags['wv'] = util.get_flags(env,'wv',0)
+
 if int(flags['wv']):
 	print "WavPack audio file support...",
 	if have_wv:
@@ -534,112 +251,17 @@ else:
 
 env = conf.Finish()
 
-#Declare the flags for Mixxx's config/track listing files:
-#The quotes are necessary, since these are used directly in C code as strings
-if build.platform_is_linux or build.platform_is_bsd:
-        _mixxx_files = [('SETTINGS_PATH','.mixxx/'), ('BPMSCHEME_FILE','mixxxbpmscheme.xml'), ('SETTINGS_FILE', 'mixxx.cfg'), ('TRACK_FILE', 'mixxxtrack.xml')]
-elif build.platform_is_osx: #right now this is the same as linux and bsd, but these files should really go in ~/Library/Applicationsomething like the rest of OS X apps do
-        _mixxx_files = [('SETTINGS_PATH','.mixxx/'), ('BPMSCHEME_FILE', 'mixxxbpmscheme.xml'), ('SETTINGS_FILE', 'mixxx.cfg'), ('TRACK_FILE', 'mixxxtrack.xml')]
-elif build.platform_is_windows:
-        _mixxx_files = [('SETTINGS_PATH','Local Settings/Application Data/Mixxx/'), ('BPMSCHEME_FILE', 'mixxxbpmscheme.xml'), ('SETTINGS_FILE', 'mixxx.cfg'), ('TRACK_FILE', 'mixxxtrack.xml')]
-_mixxx_files = [(k, r'\"' + v + r'\"') for k,v in _mixxx_files] #escape the filepaths, so that they wind up as C-strings to the C-compiler (the \s are so the shell doesn't eat the ")
-env.Append(CPPDEFINES=_mixxx_files)
-del _mixxx_files #safety net
-
-# say where to find resources on Unix
-# XXX we should replace this with a RESOURCES_PATH and covers Win and OS X too
-if build.platform_is_linux or build.platform_is_bsd:
-	env.Append(CPPDEFINES=('UNIX_SHARE_PATH', r'\"' + os.path.join(ARGUMENTS.get('prefix', '/usr/local'),'share/mixxx') + r'\"'))
-
 #declare platform specific flags? though we shouldn't really need these, the compilers should Just Know...
 #on __APPLE__ it works like that. probably we just need to look into what the default __platform__ #defines are and search and replace in the code
 env.Append(CPPDEFINES=machine)
 
-if build.platform_is_linux:
-	env.Append(CPPDEFINES='__LINUX__')
-elif build.platform_is_bsd:
-	env.Append(CPPDEFINES='__BSD__')
-elif build.platform_is_windows:
-	env.Append(CPPDEFINES='__WINDOWS__')
-	env.Append(CPPDEFINES='UNICODE')	# Need this on Windows until we have UTF16 support in Mixxx
-	env.Append(CPPDEFINES='WIN'+bitwidth)
-
-if build.platform_is_linux or build.platform_is_bsd: #a define for code that works on unix only can ask for (not sure if this is actually used anywhere)
-	env.Append(CPPDEFINES='__UNIX__')
-
-env.Append(CPPPATH = ['.', '../', '../../']) #Fun fun fun with paths
-
-if build.platform_is_linux or build.platform_is_bsd:
-	env.Append(LIBS = 'sndfile') #? we shouldn't have to do this...
-	env.Append(LIBS = 'vorbisfile') #? we shouldn't have to do this...
-
-if build.platform_is_windows:
-        #Needed for Midi stuff, should be able to remove since PortMIDI
-	env.Append(LIBS = 'WinMM');
-        #Tobias Rafreider: libshout won't compile if you uncomment this
-	#env.Append(LIBS = 'ogg_static')
-	#env.Append(LIBS = 'vorbis_static')
-	#env.Append(LIBS = 'vorbisfile_static')
-	env.Append(LIBS = 'imm32')
-	env.Append(LIBS = 'wsock32')
-	env.Append(LIBS = 'delayimp')
-	env.Append(LIBS = 'winspool')
-	env.Append(LIBS = 'shell32')
-
-if build.platform_is_windows:
-	env.Append(CPPPATH=["$VCINSTALLDIR/include/atl", "C:/Program Files/Microsoft Platform SDK/Include/atl"])
-else:
-        # TODO(XXX) always generate debugging info? Why -pipe?
-	env.Append(CCFLAGS = Split(""" -pipe -Wall -Wextra -g """)) # omghax
-        # These are not valid linker flags. Delete?
-	env.Append(LINKFLAGS = Split(""" -pipe -Wall -Wextra -g"""))
-
-
-#Uic these guys (they're moc'd automatically after this) - Generates the code for the QT UI forms
-env.Uic4('dlgpreferencesdlg.ui')
-env.Uic4('dlgprefsounddlg.ui')
-env.Uic4('dlgprefmidibindingsdlg.ui')
-env.Uic4('dlgprefplaylistdlg.ui')
-env.Uic4('dlgprefnomididlg.ui')
-env.Uic4('dlgprefcontrolsdlg.ui')
-env.Uic4('dlgprefeqdlg.ui')
-env.Uic4('dlgprefcrossfaderdlg.ui')
-env.Uic4('dlgprefbpmdlg.ui')
-env.Uic4('dlgbpmschemedlg.ui')
-# env.Uic4('dlgbpmtapdlg.ui')
-env.Uic4('dlgprefvinyldlg.ui')
-env.Uic4('dlgprefrecorddlg.ui')
-env.Uic4('dlgaboutdlg.ui')
-env.Uic4('dlgmidilearning.ui')
-env.Uic4('dlgtrackinfo.ui')
-env.Uic4('dlgprepare.ui')
-env.Uic4('dlgautodj.ui')
-
-#Add the QRC file which compiles in some extra resources (prefs icons, etc.)
-env.Qrc('#res/mixxx.qrc')
-sources += Split(""" #res/qrc_mixxx.cc """)
-
-# FIXME: This needs to be moved up and must be linked into the application to have any effect
-#Add Windows resource file with icons and such
-if build.platform_is_windows:
-	env.RES('mixxx.rc')
-	#Tobias Rafreider: What is the purpose of the following line, if the file doesn't exist?
-	#sources += Split(""" mixxx.res """)
-
 #Tell SCons to build libraries that are bundled with Mixxx
 #===================================================
-
-# General MSVC defines? Anybody know why these are required
-if build.platform_is_windows:
-	env.Append(LINKFLAGS = ['/nodefaultlib:LIBCMT.lib', '/nodefaultlib:LIBCMTD.lib'])
-	env.Append(CXXFLAGS = '/Zc:wchar_t-') #Ugh, MSVC-only hack :( see http://www.qtforum.org/article/17883/problem-using-qstring-fromstdwstring.html
-
 
 #Parse command-line build flags
 build_flags = ""
 
 print "\nFeatures Summary:\n================"
-
 
 #High quality EQs
 flags['hifieq'] = util.get_flags(env, 'hifieq', 1)
