--- a/mixxx/lib/ladspa/SConscript
+++ b/mixxx/lib/ladspa/SConscript
@@ -2,14 +2,15 @@
 import os
 
 #Import('env') # do we want to do this? we don't really want to pollute the higher level env with the lower, right?
-Import('platform')
+Import('build')
 
 env = Environment(SHLIBPREFIX='') #We want to build the LADSPA plugins without any "lib" prefix on POSIX platforms. <-- why?
 env.Append(CPPPATH=['#lib/ladspa']) #XXX should be '.' but SCons isn't smart enough to know that because this is a subfile in a variant dir that we need to rewrite the paths
 
 nodes = []
 
-if 'win' not in platform: #These plugins will never compile on windows. - Albert
+#These plugins will never compile on windows. - Albert
+if not build.platform_is_windows:
 	nodes += SConscript(['caps/SConscript'], exports='env')
 	nodes += SConscript(['cmt/SConscript'], exports='env')
 
